app name and icon

--- a/Android/imagerecog/app/src/main/res/values/strings.xml
+++ b/Android/imagerecog/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">imagerecog</string>
+    <string name="app_name">Wemo</string>
     <string name="api_key">AIzaSyBWeU7sGaxT1OtjNzeFjHfjLFyTcgfYSaE</string>
 </resources>
